# kuksa.invehicle

./: .gitignore  .gitmodules  CONTRIBUTING.md  NOTICE  README.md  TESTS.md  TEST_RESULTS.md  fix.txt  layer.conf
3rd-party-libs/: README.MD
3rd-party-libs/Simple-WebSocket-Server/: server_ws.hpp
agl-kuksa/: CMakeLists.txt  README.md
agl-kuksa/doc/: Makefile  make.bat  requirements.txt
agl-kuksa/doc/source/: conf.py  developers_guide.rst  index.rst  overview.rst
agl-kuksa/meta-kuksa/: README.md
agl-kuksa/meta-kuksa/conf/: layer.conf
agl-kuksa/meta-kuksa/conf/distro/: kuksa.conf
agl-kuksa/meta-kuksa/files/: docker_group
agl-kuksa/meta-kuksa/meta-kuksa-bsp/conf/: layer.conf
agl-kuksa/meta-kuksa/meta-kuksa-bsp/wic/: sdimage-raspberrypi.wks
agl-kuksa/tools/: agl-build.sh.configure  agl-buildsdk.sh.configure  agl-configure.sh.configure
agl-kuksa/tools/cmake/: agl.cmake  bblayers.configure  git.cmake  gitCMakeLists.txt  repo.cmake  versions.cmake
app-ids/: README.md  requirements.txt
app-ids/src/: config.xml  stide.py  stide_syscall_formatter.py  syscall_tracer.py
app-ids/src/xml_validation/: configuration_file.xsd  stide_syscall_formatter_xml.xsd  syscall_tracer_xml.xsd
app-ids/wiki/: Config.md  Dependencies.md  Limitations.md  QuickStart_Kuksa.md  QuickStart_Ubuntu.md
app-ids/wiki/figures/: App-IDS_Architecture_BlockDiagram.vsdx
datalogger-http/: CMakeLists.txt  README.md  start.sh
datalogger-http/src/: honoHTTP.cpp  main.cpp
datalogger-mqtt/: CMakeLists.txt  README.md  start.sh
datalogger-mqtt/docker/: Dockerfile  Readme.md  build.sh  dockerentry.sh
datalogger-mqtt/include/: honoMqtt.hpp
datalogger-mqtt/src/: honoMqtt.cpp  main.cpp
direct-access-api/: CMakeLists.txt  README.md  client-app.py
direct-access-api/include/: accesschecker.hpp  authenticator.hpp  common.hpp  dbmanager.hpp  directAccessProcessor.hpp  exception.hpp  obeclient.hpp  vcanhandler.hpp  wschannel.hpp  wsserver.hpp
direct-access-api/src/: authenticator.cpp  dbmanager.cpp  directAccessProcessor.cpp  obeclient.cpp  vcanhandler.cpp  wsserver.cpp
elm327/: CMakeLists.txt  README.md  main.cpp  obd.hpp
elm327-visdatafeeder/: CMakeLists.txt  README.md  start.sh
elm327-visdatafeeder/dbus/: main.cpp
elm327-visdatafeeder/include/: actuatorTest.hpp  obd.hpp  vssMapper.hpp
elm327-visdatafeeder/src/: actuatorTest.cpp  main.cpp  obd.cpp  test_main.cpp  vssMapper.cpp
elm327-visdatafeeder/systemd/: elm327-visdatafeeder.service
elm327-visdatafeeder/websocket/: main.cpp
elm327_visdatafeeder/: CMakeLists.txt  README.md
email-notifier/: CMakeLists.txt  README.md  emailTemplate.html  start.sh
email-notifier/include/: emailHTTP.hpp
email-notifier/src/: emailHTTP.cpp  main.cpp
examples/demo-certificates/: Client.key  Client.pem  README.md  Server.key  Server.pem  example_token.txt  json.private.key  openssl.cnf  v3.ext
fota-raspberrypi/: README.md
fota-raspberrypi/upgrade-verification/: kuksa-upgrade-verification.service  kuksa-upgrade-verification.sh
gps-feeder/: .dockerignore  Dockerfile  Readme.md  build.sh  gps-feeder.ini  mktestpackage.sh  requirements.txt  start.sh
gps-visfeeder/: Readme.md  gps-feeder.ini  gps-feeder.py  requirements.txt  simplelog_example.csv
gps-visfeeder/providers/: gpsd.py  simplelog.py
gps-visfeeder/systemd/: gps-visfeeder.service
kuksa-appmanager/: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  requirements.txt
kuksa-appmanager/examples/: README.md  date-service-1.json
kuksa-appmanager/kuksa/: __init__.py
kuksa-appmanager/kuksa/appmanager/: __init__.py  __main__.py  appregistry.py  hawkbit.py  hono.py  services.py  utils.py  widgets.py
kuksa-appmanager/scripts/: create_app.py
kuksa-appmanager/wiki/: agl.md  build.md  development.md  fota.md  widgets.md
kuksa-dongle/: README.md  enable_standby.py  internet-status.py  kuksa-dongle  kuksa-internet.service  kuksa-internet.sh  kuksa-standby.service  kuksa-standby.sh  ofono-fix.py
kuksa-dongle/docs/: README.md
kuksa-dongle/hardware/: LICENSE  Readme.md
kuksa-dongle/hardware/Altium/: 1fach_Nutzen.PcbDoc  AEX1_PiOBD.PrjPcb  AEX1_PiOBD.PrjPcbStructure  AEX1_PiOBD.PrjPcbVariants  LTE_EM7455.SchDoc  OBD_Connector.SchDoc  OBD_STN2120.SchDoc  Output.OutJob  Overview.SchDoc  PWR_Supply.SchDoc  RPI_CM3.SchDoc  USB_USB2534.SchDoc
kuksa-dongle/hardware/Manufacturing/: AEX1_PiOBD_V0.2_Layer.xls
kuksa-dongle/housing/: antenna-bracket-basic.stl  antenna-bracket-lock.stl  housing-bottom.stl  housing-top.stl
kuksa-dongle/systemd/: kuksa-internet-status.service  kuksa-internet.service  kuksa-ofono-fix.service  kuksa-standby.service
kuksa-hawkbit/: CheckNewSoftware.py  DeployCopyStart.py  DeployDocker.py  HawkbitUtil.py  QueryPersonality.py  Readme.md  config.ini
kuksa-hawkbit/systemd/: kuksa-hawkbit.service
kuksa-hawkbit/tools/: foreverChecker.sh
kuksa-obd-dongle/: README.md  dtparam.txt  kuksa-lte-postset.service
netIDS/: CANalerts.sqlite  EventDB.sqlite  ParentClass.py  Readme.md  TimeIntervalsIDS.py  rawSniffer.py
netIDS/sniffer/: CANPayloadRealTime.py  WiFiClass.py
permision-mngt/: .gitignore  README.md  configuration.py  keycloakconnector.py  perm_manager.ini  requestHandler.py  tokenStore.py  tokenValidator.py  unixsocket.py
permision-mngt/unittest/: testconfig.py  testkeycloak.py  teststore.py  testunixsoc.py  testvalidator.py
remoteAccess/: CMakeLists.txt  README.md  start.sh
remoteAccess/include/: honoMqtt.hpp
remoteAccess/src/: honoMqtt.cpp  main.cpp
vehicle2cloud/: CMakeLists.txt  README.md  start.sh
vehicle2cloud/include/: honoHTTP.hpp  vssMapper.hpp
vehicle2cloud/src/: main.cpp  vssMapper.cpp
w3c-visserver/: CMakeLists.txt  README.md
w3c-visserver-api/: CMakeLists.txt  README.md
w3c-visserver-api/include/: visconf.hpp
w3c-visserver-api/src/: VssCommandProcessor.cpp  signing.cpp  vssdatabase.cpp
w3c-visserver-api/unit-test/: boosts  cases  w3c-viss-test.cpp  w3cunittest.cpp  w3cunittest.hpp
w3c-visserver/Simple-WebSocket-Server/: server_ws.hpp
w3c-visserver/src/: main.cpp
(+86 files in other folders)
